studies: Updated notes from Special Relativity online course

--- a/special/online-course/problem-sets.tex
+++ b/special/online-course/problem-sets.tex
@@ -153,6 +153,9 @@ maxbibnames=3]{biblatex}
   }%
 }
 
+% cancel terms in equations
+\usepackage[makeroom]{cancel}
+
 \usepackage{esint}
 \usepackage{amssymb}
 % \usepackage{commath}
@@ -497,6 +500,56 @@ maxbibnames=3]{biblatex}
         &\approx \frac{\SI{\height}{\kilo\meter} - \SI{\minheight}{\kilo\meter}}{\speed \times \SI{\sol}{\kilo\meter\per\second} \times \gammas}\
         \approx \SI{\result}{\second}.
     \end{align*}
+
+  \section{Quiz: Leading clocks lag, revisited}
+    \begin{samepage}
+      \begin{enumerate}
+        \item
+          Imagine that Bob, at a spaceport, observes Alice flying by to the right
+          in her spaceship at a velocity of [$v = $]\SI{0.9}{\c}. When Alice’s ship
+          had been previously docked at the spaceport, Alice had measured its length as
+          [$L = $]100~meters.  Alice has five clocks on her spaceship: one in front
+          (at [$x_{A1}\,=\,$]0~meters), one at [$x_{A2}\,=\,-$]25~meters, one at
+          [$x_{A3}\,=\,-$]50~meters, one at [$x_{A4}\,=\,-$]75~meters, and one at
+          the rear at [$x_{A5}\,=\,-$]100~meters. All the clocks are synchronized in
+          Alice’s frame of reference.  When Alice flies by Bob, Bob uses his
+          lattice of synchronized clocks to take simultaneous photos of Alice’s
+          clocks (simultaneous in Bob’s frame of reference
+          [$t_{B1} = t_{B2} = \dots = t_{B5}$]).
+
+          If the photos show that Alice’s front clock reads $t_{[A1]} [= t_{B1}] = 0$
+          at that instant, what equation below would give the time [$t_{A5}$]
+          that Alice's clock at [$x_{A5}\,=\,-$]100~meters has in the photos?
+          \begin{enumerate}[a)]
+            \item $t = \frac{90}{\c}$
+            \item $t = 90 \, \c^2$
+            \item $t = 0$
+            \item $t = 0.9 \, \c^2$
+          \end{enumerate}
+          Solution:
+          \begin{align*}
+            v &= \SI{0.9}{\c}\\
+            L &= \SI{100}{\meter}\\
+            x_{A1} &= 0\\
+            t_{A1} &= 0\\
+            x_{A5} &= \SI{-100}{\meter}\\
+            \\
+            t_{A5} &= \gamma \, \left(t_{B5} - \frac{v}{\c^2} x_{B5}\right)\\
+            t_{B5} &= t_{B1} = t_{A1} = 0\\
+            x_{B5} &= \frac{x_{A5}}{\gamma}\\
+            t_{A5} &= \gamma \, \left(t_{B5} - \frac{v}{\gamma \, \c^2} x_{A5}\right)\\
+            &= \gamma \, \left(0 - \frac{v}{\gamma \, \c^2} \, x_{A5}\right)\\
+            &= \cancel{\gamma} \, \left(-\frac{v}{\cancel{\gamma} \, \c^2} \, x_{A5}\right)\\
+            t_{A5} &= -\frac{\SI{0.9}{\c}}{\c^2} \times (\SI{-100}{\meter})\\
+            t_{A5} &= \frac{\SI{90}{\meter}}{\c} \rightarrow~\text{a)}
+            \intertext{Or, in this case:}
+            t_{A5} &= \frac{L \, v}{\c^2}\\
+            L &= \left|x_{A5} - x_{A0}\right|\\
+            t_{A5} &= \frac{\SI{100}{\meter} \times \SI{0.9}{\c}}{\c^2}\\
+            t_{A5} &= \frac{\SI{90}{\meter}}{\c} \rightarrow~\text{a)}
+          \end{align*}
+      \end{enumerate}
+    \end{samepage}
 
   % % References
   % \begingroup
