--- a/special/online-course/main.bib
+++ b/special/online-course/main.bib
@@ -27,3 +27,12 @@
   year={2008},
   publisher={Basic Books}
 }
+@book{taylor1992spacetime,
+  title={Spacetime Physics},
+  author={Taylor, E.F. and Wheeler, J.A.},
+  isbn={9780716723271},
+  lccn={92000722},
+  url={https://books.google.ch/books?id=PDA8YcvMc\_QC},
+  year={1992},
+  publisher={W. H. Freeman}
+}
