--- a/relativity.sty
+++ b/relativity.sty
@@ -1,4 +1,4 @@
-%% Relativistic calculations
+%% Relativistic calculations and plots for LaTeX
 
 \NeedsTeXFormat{LaTeX2e}[2014/05/01]
 \ProvidesPackage{relativity}[2017/03/10 by Thomas 'PointedEars' Lahn (c) 2017 Relativistic calculations and plots for LaTeX]
