--- a/relativity.sty
+++ b/relativity.sty
@@ -1,7 +1,7 @@
 %% Relativistic calculations and plots for LaTeX
 
 \NeedsTeXFormat{LaTeX2e}[2014/05/01]
-\ProvidesPackage{relativity}[2017/03/10 by Thomas 'PointedEars' Lahn (c) 2017 Relativistic calculations and plots for LaTeX]
+\ProvidesPackage{relativity}[2017/06/18 by Thomas 'PointedEars' Lahn (c) 2017 Relativistic calculations and plots for LaTeX2ε]
 
 \RequirePackage{fp}
 \RequirePackage{pgfplots}
@@ -92,9 +92,9 @@
   \FPeval{#2}{lorentztrafogamma * ((#4) + (#5)/abs(sol)^2 * (#3))}
 }
 
-% Defines command #1 as the combined speed in multiples of speed of light
+% Defines command #1 as the composed speed in multiples of speed of light
 % according to Lorentz transformation of the speeds #2 and #3
-\newcommand{\combinespeeds}[3]{
+\newcommand{\composespeeds}[3]{
   \FPeval{#1}{((#3) + (#2))/(1 + ((#2) * (#3))/abs(sol)^2)}
 }
 
@@ -164,18 +164,18 @@
 % Timelike worldline in style #1 (optional) parallel to the time axis
 % (not function-based) at x = #2 (default: 0) from t = #3 (default: 0)
 % to t = #4 (mandatory, no default)
-\DeclareDocumentCommand{\timelike}{O{} O{0} O{0} m}{
+\DeclareDocumentCommand{\temporal}{O{} O{0} O{0} m}{
   \addplot[#1] coordinates {
     (#2, #3)
     (#2, #4)
   };
 }
 
-% Spacelike worldline in style #1 (optional) for speed #5
-% and time #2 (default: 0)
+% Spatial worldline (line of simultaneity) in style #1 (optional)
+% for speed #5 and time #2 (default: 0)
 % shifted in the x-direction by #3 (default: 0),
 % and in the t-direction by #4 (default: 0);
-\DeclareDocumentCommand{\spacelike}{O{} O{0} O{0} O{0} m}{
+\DeclareDocumentCommand{\spatial}{O{} O{0} O{0} O{0} m}{
   {
     \lorentz{\gammav}{#5}
     \worldline[#1]{(#5)/(\sol)^2 * (x - #3) + #2/\gammav + #4};
