--- a/relativity.sty
+++ b/relativity.sty
@@ -1,7 +1,21 @@
-%% Relativistic calculations and plots for LaTeX
+%% relativity.sty - Relativistic calculations and plots for LaTeX2ε
+%% Copyright (C) 2017  Thomas 'PointedEars' Lahn <PointedEars@web.de>
+%%
+%% This program is free software: you can redistribute it and/or modify
+%% it under the terms of the GNU General Public License as published by
+%% the Free Software Foundation, either version 3 of the License, or
+%% (at your option) any later version.
+%%
+%% This program is distributed in the hope that it will be useful,
+%% but WITHOUT ANY WARRANTY; without even the implied warranty of
+%% MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+%% GNU General Public License for more details.
+%%
+%% You should have received a copy of the GNU General Public License
+%% along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 \NeedsTeXFormat{LaTeX2e}[2014/05/01]
-\ProvidesPackage{relativity}[2017/06/18 by Thomas 'PointedEars' Lahn (c) 2017 Relativistic calculations and plots for LaTeX2ε]
+\ProvidesPackage{relativity}[2017/06/24 by Thomas 'PointedEars' Lahn (c) 2017 Relativistic calculations and plots for LaTeX2ε]
 
 \RequirePackage{fp}
 \RequirePackage{pgfplots}
